--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ header {
 
 .over-image {
 	position: absolute;
-	top: 50%;
+	top: 166px;
 	left: 30%;
 }
 
@@ -56,6 +56,7 @@ h1, header h2 {
 	width: 1280px;
 	margin: 0 auto;
 	background-color: #fafafa;
+	text-align: center;
 }
 
 .container-pro h2 {
@@ -63,10 +64,40 @@ h1, header h2 {
 	font-size: 40px;
 	font-weight: 300;
 	line-height: 50px;
+	letter-spacing: 2.5px;
+	color: #000000;
+	text-transform: uppercase;
 }
+
+#work {
+	color: f63c3c;
+}
+
+/*.container-pro figure {
+	position: relative;
+	top: 30%;
+}
+
 
 .container {
 	margin: 0 auto;
 	width: 40%;
+}*/
+
+.container-content {
+	width: 47%;
+	margin: 0 auto;
 }
 
+a:link, a:visited {
+	color: #555555;
+}
+
+.container ul {
+	list-style: disc outside none;
+}
+
+aside {
+	width: 55%;
+	margin: 0 auto;
+}
