--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
 	font-size: 18px;
 	font-weight: 300;
 	color: #555555;
-	line-height: 20px;
+	/*line-height: 20px;*/
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -35,6 +35,7 @@ h1 {
 	width: 500px;
 	text-transform: uppercase;
 	line-height: 55px;
+	letter-spacing: 2.5px; 
 
 }
 
@@ -43,6 +44,9 @@ header h2 {
 	font-size: 24px;
 	font-weight: 300;
 	margin-top: 42px;
+	letter-spacing: 2px;
+	text-align: center;
+	width: 500px;
 
 }
 
@@ -51,12 +55,14 @@ h1, header h2 {
 
 }
 
+
 .container-pro {
 	max-width: 100%;
 	width: 1280px;
-	margin: 0 auto;
+	margin: 0 auto 60px;
 	background-color: #fafafa;
 	text-align: center;
+	padding-bottom: 36px;
 }
 
 .container-pro h2 {
@@ -67,26 +73,34 @@ h1, header h2 {
 	letter-spacing: 2.5px;
 	color: #000000;
 	text-transform: uppercase;
+	margin-top: -18px;
 }
 
-#work {
-	color: f63c3c;
-}
-
-/*.container-pro figure {
+.container-pro img {
 	position: relative;
-	top: 30%;
+	top: -30px;
 }
 
+.container-pro p {
+	text-transform: uppercase;
+	font-family: Teko, Helvetica, Arial, sans-serif;
+	font-weight: 18px;
+	font-weight: 300;
+	letter-spacing: 1px;
+}
 
-.container {
-	margin: 0 auto;
-	width: 40%;
-}*/
+p.light {
+	color: #f63c3c;
+}
 
 .container-content {
 	width: 47%;
 	margin: 0 auto;
+	line-height: 35px;
+}
+
+.container-content p {
+	margin-bottom: 42px;
 }
 
 a:link, a:visited {
@@ -97,7 +111,232 @@ a:link, a:visited {
 	list-style: disc outside none;
 }
 
-aside {
-	width: 55%;
+#container-form {
+	width: 47%;
 	margin: 0 auto;
+	margin-top: 68px;
+
 }
+
+#container-form h3 {
+	font-family: Teko, Helvetica, Arial, sans-serif;
+	font-size: 30px;
+	font-weight: 300;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	margin-bottom: 30px;
+
+}
+
+input {
+	width: 570px;
+
+}
+
+#container-form input.name {
+	padding-top: 20px;
+	padding-left: 22px;
+	padding-bottom: 20px;
+	padding-right: 350px;
+	margin-bottom: 12px;
+	font-size: 14px;
+
+}
+
+#container-form input.message {
+	padding-top: 20px;
+	padding-left: 22px;
+	padding-bottom: 208px;
+	padding-right: 350px;
+	font-size: 14px;
+}
+
+.field {
+	height: 240px;
+}
+
+button {
+	color:#fff;
+	background-color: #f63c3c;
+	padding: 16px;
+	font-family: Teko, Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	font-weight: 300;
+	text-transform: uppercase;
+	letter-spacing: 4px;
+	border: 0;
+	margin-top: 10px;
+	margin-bottom: 114px;
+
+
+}
+
+aside {
+	margin: 0 auto;
+	text-align: center;
+	overflow: visible;
+
+}
+
+aside h4 {
+	font-family: Teko, Helvetica, Arial, sans-serif;
+	font-size: 20px;
+	font-weight: 400;
+	text-transform: uppercase;
+	letter-spacing: 3.5px;
+	margin-bottom: 18px;
+
+}
+
+aside p {
+	color: #b4b4b4;
+	margin-bottom: 30px;
+}
+
+aside ul li{
+	display: inline-block;
+	width: 22%;
+	border: solid 2px #d7d5d5;
+	color: #352d2f;
+	font-family: Teko, Helvetica, Arial, sans-serif;
+	font-size: 20px;
+	font-weight: 300;
+	text-transform: uppercase;
+	letter-spacing: 3px;
+	padding: 16px 74px 16px 70px; 
+	margin-right: 30px;
+	margin-bottom: 34px; 
+}
+
+aside ul li a {
+	text-decoration: none;
+
+}
+
+.fa {
+	padding-right: 20px;
+}
+
+.available figure, .available img,{
+	display: inline-block;
+
+}
+
+.available figure {
+	width: 100%;
+}
+
+.available figure img {
+	float: left;
+	width: 50%;
+}
+
+.available #previous h4, .available #next h4  {
+	position: absolute;
+	color: #b7b3b2;
+	font-family: Teko, Helvetica, Arial, sans-serif;
+	font-size: 20px;
+	letter-spacing: 3px; 
+	text-transform: uppercase;
+
+}
+
+.available #previous h4 {
+	top: 2240px;
+	right: 92%;
+
+}
+
+.available figcaption {
+	position: absolute;
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 36px;
+	font-family: Teko, Helvetica, Arial, sans-serif;
+	font-weight: 300;
+	letter-spacing: 3px;
+
+}
+
+.available #next h4 {
+	top: 2240px;
+	right: 43%;
+
+}
+
+.available #previous figcaption {
+	top: 2270px;
+    left: 2%;
+    width: 40%;
+
+}
+
+.available #next figcaption {
+	top: 2270px;
+	right: 6%;
+	width: 40%;
+}
+
+footer {
+	position: relative;
+	left: 10%;
+	margin-top: 28px; 
+	font-size: 13px;
+}
+
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
