--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,13 @@
 	box-sizing: border-box;
 }
 
+html {
+	font-size: 16px;
+}
+
 body {
 	font-family: 'Titillium Web', Helvetica, Arial, sans-serif;
-	font-size: 18px;
+	font-size: 1.125em; /* 18px/16px */
 	font-weight: 300;
 	color: #555555;
 	/*line-height: 20px;*/
@@ -15,27 +19,36 @@ body {
 }
 	
 header {
-	background: #352d2f url(../img/background.jpg) no-repeat;
+	background: #352d2f url(../img/background.jpg) center center no-repeat;
 	width: 100%;
 	height: 525px;
 	position: relative;
 	text-align: center;
 }
 
-.over-image {
+.title-wrapper {
 	position: absolute;
-	top: 166px;
-	left: 30%;
+	top: 25%;
+	width: 100%;
+}
+
+.title {
+	display: block;
+	margin: 0 auto;
+	width: 46%;
+	translate: transformY(-50%);
+
 }
 
 h1 {
 	font-family:'Montserrat', Helvetica, Arial, sans-serif;
 	font-size: 48px;
 	font-weight: 700;
-	width: 500px;
+	/*width: 500px;*/
 	text-transform: uppercase;
 	line-height: 55px;
 	letter-spacing: 2.5px; 
+	width: 97%;
 
 }
 
@@ -46,7 +59,6 @@ header h2 {
 	margin-top: 42px;
 	letter-spacing: 2px;
 	text-align: center;
-	width: 500px;
 
 }
 
@@ -57,12 +69,13 @@ h1, header h2 {
 
 
 .container-pro {
+	display: block;
 	max-width: 100%;
-	width: 1280px;
-	margin: 0 auto 60px;
+	/*margin: 0 auto 60px;*/
 	background-color: #fafafa;
 	text-align: center;
 	padding-bottom: 36px;
+	transform: translateY(-50%);
 }
 
 .container-pro h2 {
@@ -219,14 +232,18 @@ aside ul li a {
 	padding-right: 20px;
 }
 
-.available figure, .available img,{
+.available {
+	position: relative;
+}
+
+.available img {
 	display: inline-block;
 
 }
 
-.available figure {
+/*.available figure {
 	width: 100%;
-}
+}*/
 
 .available figure img {
 	float: left;
@@ -244,7 +261,7 @@ aside ul li a {
 }
 
 .available #previous h4 {
-	top: 2240px;
+	top: 28%;
 	right: 92%;
 
 }
@@ -261,22 +278,22 @@ aside ul li a {
 }
 
 .available #next h4 {
-	top: 2240px;
-	right: 43%;
+	top: 28%;
+	right: 41%;
 
 }
 
 .available #previous figcaption {
-	top: 2270px;
+	top: 48%;
     left: 2%;
     width: 40%;
 
 }
 
 .available #next figcaption {
-	top: 2270px;
-	right: 6%;
-	width: 40%;
+	top: 48%;
+	left: 56%;
+	width: 43%;
 }
 
 footer {
